# trade-ml

./: .gitignore  README.md
app/: README.md  bsconfig.json  index.html  package-lock.json  package.json  tailwind.config.js
app/src/: App.bs.js  App.res  Index.bs.js  Index.res  Utils.bs.js  Utils.res  index.css  index.js
app/src/components/: Analytics.res  App.res  Content.res  Disclosure.res  Error.res  Header.res  Recharts.res  Transactions.res
app/src/pages/: Analytics.res  Dashboard.res  PageNotFound.res
app/src/utils/: Icons.res  Types.res  Utils.res
forecasting/data/: BTCUSDT-5m-5klines.csv
forecasting/model/: LSTM-BTC.ipynb  dune  example.ml  model_train.ml
server/: dune-project  trade_ml.opam
server/_coverage/: index.html
server/_coverage/src/: lib.ml.html
server/forecasting/data/: BTCUSDT-5m-5klines.csv
server/forecasting/model/: LSTM-BTC.ipynb  dune  example.ml  model.pt
server/forecasting/model/.ipynb_checkpoints/: LSTM-BTC-checkpoint.ipynb
server/src/: app.ml  dune  lib.ml  lib.mli
server/test/: dune  tests.ml
src/: app.eml.ml  app.ml  dune  lib.ml  lib.mli
